[tool.poetry]
name = "metamemo"
version = "0.1.0"
description = ""
authors = ["Capi Etheriel <barraponto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
commitizen = "^2.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
