[tool.poetry]
name = "metamemo"
version = "0.1.0"
description = ""
authors = ["Capi Etheriel <barraponto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
commitizen = "^2.21.2"
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^4.0.1"
flake8-black = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
